--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+.header {
+  display: flex;
+  height: 50px;
+  color: white;
+  background-color: #002d62;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 100px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.temperature {
+  display: flex;
+  align-items: center;
+}
+.degree {
+  font-size: 150px;
+  margin-left: 20px;
+}
+.unit {
+  display: flex;
+  flex-direction: column;
+}
+.active-unit {
+  font-size: 50px;
+  cursor: pointer;
+}
+.deactivate-unit {
+  font-size: 20px;
+  cursor: pointer;
+}
+.other-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.location {
+  display: flex;
+  color: white;
+  padding-left: 50px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.search-icon {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  cursor: pointer;
+  font-size: 30px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  width: 30px;
+  height: 30px;
+  background-color: #0b7dda;
+  border: 0;
+}
+input {
+  height: 24px;
+}
+input:focus {
+  outline: none;
+}
+
+.refresh-icon {
+  margin-right: 20px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
 }
